fix align close and icon

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -414,7 +414,7 @@ ul.manage li {
 }
 
 .tab-bar h1, .tab-bar h2, .tab-bar h3, .tab-bar h4, .tab-bar h5, .tab-bar h6 {
-  line-height: 2.5rem;
+  line-height: 2.7rem;
 }
 
 .sidebar li.nav-item.selected .name-wallet {
